--- a/Views/auth/register.handlebars
+++ b/Views/auth/register.handlebars
@@ -1,4 +1,4 @@
-<div class="auth_container">
+<div class="auth-container">
     <h2>Registrar</h2>
     <form action="/register" method="post">
         <div class="form-control">
