:sparkles: feat: criando flash message para view 'Registro'

--- a/Views/auth/register.handlebars
+++ b/Views/auth/register.handlebars
@@ -15,7 +15,7 @@
         </div>
         <div class="form-control">
             <label for="confirmpassword">Confirme a senha:</label>
-            <input type="confirmpassword" name="confirmpassword" placeholder="Confirme a sua senha..." required>
+            <input type="password" name="confirmpassword" placeholder="Confirme a sua senha..." required>
         </div>
         <input type="submit" value="Cadastrar">
         <p>Já tem conta? <a href="/login">Clique aqui!</a></p>
