--- a/Views/Layouts/main.handlebars
+++ b/Views/Layouts/main.handlebars
@@ -25,7 +25,11 @@
         </ul>
     </nav>
     <div class="container">
-        <!-- Mensagens -->
+        {{#if messages.message}}
+        <div class="message">
+            {{messages.message}}
+        </div>
+        {{/if}}
         {{{body}}}
     </div>
     <footer>
