:sparkles: feat: criando sessions e auth

--- a/Views/Layouts/main.handlebars
+++ b/Views/Layouts/main.handlebars
@@ -20,8 +20,13 @@
         <ul>
             <!--URLs após autenticação-->
             <li><a href="/">Pensamentos</a></li>
+            {{#if session.userid}}
+                <li><a href="/thoughts/dashboard">Dashboard</a></li>
+                <li><a href="/logout">Sair</a></li>
+            {{else}}
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Registrar</a></li>
+            {{/if}}
         </ul>
     </nav>
     <div class="container">
