--- a/Views/thoughts/dashboard.handlebars
+++ b/Views/thoughts/dashboard.handlebars
@@ -1,12 +1,21 @@
 <div class="dashboard">
     <div class="title-container">
         <h2>Dashboard</h2>
-        <a href="/thoughts/add" class="btn"> Criar pensamentos</a>        
+        <a href="/thoughts/add" class="btn"> Criar pensamentos</a>
     </div>
     <h3>Seus pensamentos</h3>
     <ul>
         {{#each thoughts}}
-            <li>{{this.title}}</li>
+        <li>
+            <span class="label"> {{this.title}} </span>
+            <span class="actions">
+                <a href="/" class="btn">Editar</a>
+                <form action="" method="post">
+                    <input type="hidden" name="id" value="{{this.id}}">
+                    <input type="submit" value="Excluir" class="btn">
+                </form>
+            </span>
+        </li>
         {{/each}}
     </ul>
 </div>
