--- a/Views/thoughts/dashboard.handlebars
+++ b/Views/thoughts/dashboard.handlebars
@@ -10,7 +10,7 @@
             <span class="label"> {{this.title}} </span>
             <span class="actions">
                 <a href="/" class="btn">Editar</a>
-                <form action="" method="post">
+                <form action="/thoughts/remove" method="post">
                     <input type="hidden" name="id" value="{{this.id}}">
                     <input type="submit" value="Excluir" class="btn">
                 </form>
